--- a/readme.me
+++ b/readme.me
@@ -1,1 +1,14 @@
-project id is 24
+## Jira Taiga Importer
+
+#Description:
+* Goal is to build a parser that will convert jira xml to taiga json format and a parser that does that opposite.
+
+###Technologies
+* Python element tree (having issues)
+* Ruby nokogiri (PROGRESS)
+
+
+###Taiga json notes:
+* [Source](https://tree.taiga.io/project/last_link-taiga-jira-importer/)
+###Jira
+* project id is 24
